// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots actions button 1`] = `
<div
  data-css-1lu7sfl=""
>
  <div
    data-css-1aye8gw=""
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      data-css-1997kh1=""
    >
      As a button
    </span>
  </div>
</div>
`;

exports[`Storyshots actions button w/ icon button 1`] = `
<div
  data-css-1lu7sfl=""
>
  <div
    data-css-22obee=""
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      data-css-1997kh1=""
    >
      As a button
    </span>
    <div
      data-css-7dab2f=""
      onClick={[Function]}
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots actions just icon button 1`] = `
<div
  data-css-1lu7sfl=""
>
  <div
    data-css-1fdqpqx=""
  >
    <span
      data-css-1997kh1=""
    >
      As a button
    </span>
    <div
      data-css-7dab2f=""
      onClick={[Function]}
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots actions link 1`] = `
<div
  data-css-1lu7sfl=""
>
  <a
    data-css-1aye8gw=""
    href="https://duckduckgo.com/"
  >
    <span
      data-css-1997kh1=""
    >
      As a link
    </span>
  </a>
</div>
`;

exports[`Storyshots actions link with target 1`] = `
<div
  data-css-1lu7sfl=""
>
  <a
    data-css-1aye8gw=""
    href="https://duckduckgo.com/"
    target="_blank"
  >
    <span
      data-css-1997kh1=""
    >
      Opens in new window
    </span>
  </a>
</div>
`;

exports[`Storyshots actions small button 1`] = `
<div
  data-css-1lu7sfl=""
>
  <div
    data-css-4i7rei=""
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      data-css-1997kh1=""
    >
      As a button
    </span>
  </div>
</div>
`;

exports[`Storyshots error focusable 1`] = `
<div
  data-css-mmyfiy=""
>
  <div
    data-css-1aye8gw=""
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      data-css-1997kh1=""
    >
      I have a problem
    </span>
  </div>
</div>
`;

exports[`Storyshots icon medium 1`] = `
<div
  data-css-1lu7sfl=""
>
  <div
    data-css-1fdqpqx=""
  >
    <span
      data-css-1997kh1=""
    >
      With Icon
    </span>
    <div
      data-css-7dab2f=""
      onClick={[Function]}
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots icon small 1`] = `
<div
  data-css-1lu7sfl=""
>
  <div
    data-css-1icj9y5=""
  >
    <span
      data-css-1997kh1=""
    >
      With Icon
    </span>
    <div
      data-css-1gzzcm2=""
      onClick={[Function]}
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots isPressed button 1`] = `
<div
  data-css-1lu7sfl=""
>
  <div
    aria-pressed={true}
    data-css-9da3oj=""
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      data-css-1997kh1=""
    >
      As a button
    </span>
  </div>
</div>
`;

exports[`Storyshots isPressed button w/ icon button 1`] = `
<div
  data-css-1lu7sfl=""
>
  <div
    aria-pressed={true}
    data-css-miasr5=""
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      data-css-1997kh1=""
    >
      As a button
    </span>
    <div
      data-css-7dab2f=""
      onClick={[Function]}
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots isPressed link 1`] = `
<div
  data-css-1lu7sfl=""
>
  <a
    aria-pressed={true}
    data-css-9da3oj=""
    href="https://duckduckgo.com/"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      data-css-1997kh1=""
    >
      As a link
    </span>
  </a>
</div>
`;

exports[`Storyshots isPressed without click/href 1`] = `
<div
  data-css-1lu7sfl=""
>
  <div
    aria-pressed={true}
    data-css-2yhwm3=""
  >
    <span
      data-css-1997kh1=""
    >
      no click/href
    </span>
  </div>
</div>
`;

exports[`Storyshots long string 1`] = `
<div
  data-css-1lu7sfl=""
>
  <div
    data-css-q4lcrt=""
  >
    <span
      data-css-1997kh1=""
    >
      This is the string that goes on forever and always. There really isn't an end. Wow.
    </span>
  </div>
</div>
`;

exports[`Storyshots long with icon 1`] = `
<div
  data-css-1lu7sfl=""
>
  <div
    data-css-1fdqpqx=""
  >
    <span
      data-css-1997kh1=""
    >
      This is the string that goes on forever and always. There really isn't an end. Wow.
    </span>
    <div
      data-css-7dab2f=""
      onClick={[Function]}
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots size medium 1`] = `
<div
  data-css-1lu7sfl=""
>
  <div
    data-css-q4lcrt=""
  >
    <span
      data-css-1997kh1=""
    >
      medium
    </span>
  </div>
</div>
`;

exports[`Storyshots size small 1`] = `
<div
  data-css-1lu7sfl=""
>
  <div
    data-css-zm8zht=""
  >
    <span
      data-css-1997kh1=""
    >
      small
    </span>
  </div>
</div>
`;
